# auto-report-generator

./: .gitignore  README.md  data_extraction.py  keyword_generation.py  main.py  naver_api.py  pyproject.toml  report_generation.py
cache/: stopword.txt
